// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare global {
    interface Event {
	    persist: Function
  	}
}

=====================================output=====================================
declare global {
  interface Event {
    persist: Function;
  }
}

================================================================================
`;

exports[`moduleNamespace.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module "f" {}

namespace f {}

=====================================output=====================================
declare module "f" {}

namespace f {}

================================================================================
`;

exports[`nestedNamespace.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
namespace X {
    export namespace Y {

    }
}

namespace X.Y {

}

=====================================output=====================================
namespace X {
  export namespace Y {}
}

namespace X.Y {}

================================================================================
`;
